# haimp-simple-msa

./: .flake8  .gitignore  README.md  pyproject.toml
src/: auth.py  database.py  domains.py  exceptions.py  signature.py  tokens.py
src/users/: models.py
tests/: conftest.py  test_domains.py  test_encrypt.py  test_jwt.py  test_public_key.py  test_signature.py  test_tokens.py
